--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -2,21 +2,56 @@
 %-------------------------------
 \chapter{Biologische Grundlagen}
 
+"`Nichts anderes in der Natur hat eine herrlichere Struktur als der Körper der Wirbeltiere."' (\cite{Vergleichende_Anatomie}, S.\ 1)
+
+%-----------------------------------------------------
+\section{Kurze biologische Einführung zu Wirbeltieren}
+
 \begin{itemize}
- \item Was sind Wirbeltiere?
+ \item Was sind Wirbeltiere? (Symmetrie erwähnen)
  \item Was gibt es für Wirbeltiere?
- \item Schematischer Aufbau des Skeletts
- \item Ähnlichkeiten und Unterschiede (\zb große vs. kleine Tiere, kann man sie einfach skalieren?; Knochen die sich stark oder weniger stark unterschieden)
- \item Fakten, die später noch gebraucht werden (\zb schwerstes Tier, Anzahl Wirbel)
+ 
+ \item "`Wirbeltiere (Vertebrata) [\dots] Von vielen Zoologen wird heute der Begriff Schädeltiere (Craniota) für dieses Taxon bevorzugt. Diese Auffassung berücksichtigt, dass die Rundmäuler, wie auch einige andere Wirbeltiere, als Achsenskelett keine Wirbelsäule, sondern eine Chorda dorsalis haben. Doch allen Wirbeltieren gemein ist ein verknöcherter oder knorpeliger Schädel; sein Vorhandensein gehört somit zu den gemeinsam abgeleiteten Merkmalen (Synapomorphien) dieser Chordaten-Gruppe."' (\url{https://de.wikipedia.org/wiki/Wirbeltiere}) $\rightarrow$ Beschränkung auf Schädeltiere mit Wirbelsäule
+ \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
+ 
+ \item Teil der allgeime Beschreibung der (meisten) Vertebraten (\cite{Vergleichende_Anatomie} S.\ 27): 
+ \begin{itemize}
+  \item "`Der Körper ist bilateralsymmetrisch, \dash er weist eine rechte und eine linke Seite, ein anteriores und ein posteriores Ende und eine dorsale und eine ventrale Oberfläche auf."'
+  \item Sie haben ein inneres Skelett.
+ \end{itemize}
 \end{itemize}
 
 
+%------------------------------------
+\section{Das Skelett der Wirbeltiere}
+
+"`Das innere, gelenkige Skelettsystem der Vertebraten ist einzigartig im Tierreich. Es ist das wichtigste aller Organsysteme für das Studium der Wirbeltiermorphologie."' (\cite{Vergleichende_Anatomie}, S.\ 131)
+
+\todo{Schematischer Aufbau eines Wirbeltierskeletts}
+
 \begin{itemize}
- \item "`Wirbeltiere (Vertebrata) [\dots] Von vielen Zoologen wird heute der Begriff Schädeltiere (Craniota) für dieses Taxon bevorzugt. Diese Auffassung berücksichtigt, dass die Rundmäuler, wie auch einige andere Wirbeltiere, als Achsenskelett keine Wirbelsäule, sondern eine Chorda dorsalis haben. Doch allen Wirbeltieren gemein ist ein verknöcherter oder knorpeliger Schädel; sein Vorhandensein gehört somit zu den gemeinsam abgeleiteten Merkmalen (Synapomorphien) dieser Chordaten-Gruppe."' (\url{https://de.wikipedia.org/wiki/Wirbeltiere}) $\rightarrow$ Beschränkung auf Schädeltiere mit Wirbelsäule
- \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
+ \item Muskeln haben Ansatzstellen an Knochen, die Lage und Ausmaße zeigen. (\cite{Vergleichende_Anatomie}, S.\ 131)
  \item Das Skelett eines Wirbeltiers ist nicht unbedingt zusammenhängend.
+
+ \item Schultergürtel: Das Schlüsselbein ist bei den meisten Wirbeltieren zurückgebildet, bei manchen gar nicht vorhanden. Das Rabenbein ist bei vielen Wirbeltieren zu einem Fortsatz am Schulterblatt zurückgebildet. Das Schulterblatt ist meistens vorhanden. $\rightarrow$ Nur das Schulterblatt wird modelliert.\\
+ \url{https://de.wikipedia.org/wiki/Schulterg\%C3\%BCrtel}
  
- \item "`Säugetiere haben in der Regel sieben Halswirbel."' Bei Wirbeltieren kann die Anzahl aber zwischen $6$ und $31$ variieren. Vögel haben zwischen $10$ und $31$ und zwei Tiere haben $6$ Wirbel. (\url{https://de.wikipedia.org/wiki/Halswirbel}, weitere Quelle zu Wirbelanzahl bei Säugetieren: \url{https://archive.org/details/bub_gb_4JFmAAAAMAAJ/page/n35/mode/2up}, S.10)
+ \item "`Die paarigen Flossen von Fischen und Extremitäten von Tetrapoden sind insofern homologe Skelettelemente, als sie bei beiden an Schulter- und Beckengürtel ansetzen und die Extremitäten aus den paarigen Flossen evolutionär hervorgegangen sind.\cite{homology} Sie unterschieden sich jedoch im Knochenaufbau und in der Embryonalentwicklung, so dass ein evolutionärer Übergang aus den Einzelelementen schwer erklärbar ist."'\\
+ $\rightarrow$ einfach ignorieren und trotzdem (erstmal) so modellieren?\\
+ \url{https://de.wikipedia.org/wiki/Extremit\%C3\%A4tenevolution}
+ 
+  \item Ähnlichkeiten und Unterschiede (\zb große vs. kleine Tiere, kann man sie einfach skalieren?; Knochen die sich stark oder weniger stark unterschieden)
+\end{itemize}
+
+%- - - - - - - - - - - - - -
+\subsection{Die Wirbelsäule}
+
+\begin{itemize}
+ \item Wirbel können viele verschiedene Merkmale haben, \zb Dornfortsatz, Ansatz der Rippe (\cite{Vergleichende_Anatomie}, (siehe Bild S.\ 165) (S.\ 163)
+ 
+ \item Evolution der Wirbelsäule: zunächst Chorda dorsalis mit stützenden Knorpeln (\cite{Vergleichende_Anatomie}, S.\ 166)
+ 
+  \item "`Säugetiere haben in der Regel sieben Halswirbel."' Bei Wirbeltieren kann die Anzahl aber zwischen $6$ und $31$ variieren. Vögel haben zwischen $10$ und $31$ und zwei Tiere haben $6$ Wirbel. (\url{https://de.wikipedia.org/wiki/Halswirbel}, weitere Quelle zu Wirbelanzahl bei Säugetieren: \url{https://archive.org/details/bub_gb_4JFmAAAAMAAJ/page/n35/mode/2up}, S.10)
     \begin{itemize}
      \item Halswirbel: 7 oder, falls Flügel 10 bis 30
      \item Brustwirbel: 15
@@ -26,14 +61,23 @@
  Auf der Rückenwirbelsäule liegen also insgesamt 25 Wirbel.   
  Da der "`Wurzelwirbel"' in der Mitte der Rückenwirbelsäule liegt (oder zumindest ungefähr, da Bezierkurve ausgewertet bei 0,5) werden 13 vorne und 12 hinten generiert.
 
- 
  \item Form der Wirbelsäule siehe \url{https://de.wikipedia.org/wiki/Wirbels\%C3\%A4ule}
- 
- \item Schultergürtel: Das Schlüsselbein ist bei den meisten Wirbeltieren zurückgebildet, bei manchen gar nicht vorhanden. Das Rabenbein ist bei vielen Wirbeltieren zu einem Fortsatz am Schulterblatt zurückgebildet. Das Schulterblatt ist meistens vorhanden. $\rightarrow$ Nur das Schulterblatt wird modelliert.\\
- \url{https://de.wikipedia.org/wiki/Schulterg\%C3\%BCrtel}
- 
- \item "`Die paarigen Flossen von Fischen und Extremitäten von Tetrapoden sind insofern homologe Skelettelemente, als sie bei beiden an Schulter- und Beckengürtel ansetzen und die Extremitäten aus den paarigen Flossen evolutionär hervorgegangen sind.\cite{homology} Sie unterschieden sich jedoch im Knochenaufbau und in der Embryonalentwicklung, so dass ein evolutionärer Übergang aus den Einzelelementen schwer erklärbar ist."'\\
- $\rightarrow$ einfach ignorieren und trotzdem (erstmal) so modellieren?\\
- \url{https://de.wikipedia.org/wiki/Extremit\%C3\%A4tenevolution}
+\end{itemize}
+
+
+%-----------------------------------------------------
+\section{Fun Facts (die später noch gebraucht werden)}
+
+\zb schwerstes Tier
+
+
+%-------------------
+\section{Mythologie}
+
+\begin{itemize}
+ \item Zentauren haben Körper wie ein Pferd, aber statt einem Hals setzt ein menschlicher Oberkörper auf Schultergürtel auf.\\
+ \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/OurCentaursAreDifferent?from=Main.CentauroidForm}
+ \item Pegasus hat den Körper eines Pferdes + Flügel, die zusätzlich zu den Vorderbeinen an Schultergürtel ansetzen\\
+ \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/Pegasus}
 \end{itemize}
 
