--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -1,43 +1,57 @@
 %-------------------------------
 %-------------------------------
-\chapter{Biologische Grundlagen}
+\chapter{Biologische Grundlagen zu Wirbeltieren}
 
-"`Nichts anderes in der Natur hat eine herrlichere Struktur als der Körper der Wirbeltiere."' (\cite{Vergleichende_Anatomie}, S.\ 1)
-
-%-----------------------------------------------------
-\section{Kurze biologische Einführung zu Wirbeltieren}
-
-\begin{itemize}
- \item Was sind Wirbeltiere? (Symmetrie erwähnen)
- \item Was gibt es für Wirbeltiere?
+\begin{center}
+ \begin{minipage}{12cm}
+  \emph{"`Nichts anderes in der Natur hat eine herrlichere Struktur als der Körper der Wirbeltiere."'}
  
- \item "`Wirbeltiere (Vertebrata) [\dots] Von vielen Zoologen wird heute der Begriff Schädeltiere (Craniota) für dieses Taxon bevorzugt. Diese Auffassung berücksichtigt, dass die Rundmäuler, wie auch einige andere Wirbeltiere, als Achsenskelett keine Wirbelsäule, sondern eine Chorda dorsalis haben. Doch allen Wirbeltieren gemein ist ein verknöcherter oder knorpeliger Schädel; sein Vorhandensein gehört somit zu den gemeinsam abgeleiteten Merkmalen (Synapomorphien) dieser Chordaten-Gruppe."' (\url{https://de.wikipedia.org/wiki/Wirbeltiere}) $\rightarrow$ Beschränkung auf Schädeltiere mit Wirbelsäule
- \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
- 
- \item Teil der allgeime Beschreibung der (meisten) Vertebraten (\cite{Vergleichende_Anatomie} S.\ 27): 
- \begin{itemize}
-  \item "`Der Körper ist bilateralsymmetrisch, \dash er weist eine rechte und eine linke Seite, ein anteriores und ein posteriores Ende und eine dorsale und eine ventrale Oberfläche auf."'
-  \item Sie haben ein inneres Skelett.
- \end{itemize}
-\end{itemize}
+  --- "`Vergleichende und funktionelle Anatomie der Wirbeltiere"' \cite{Vergleichende_Anatomie}, S.\ 1
+ \end{minipage}
+\end{center}
+
+Es folgt eine Einleitung zur biologischen Beschaffenheit der Wirbeltiere. Diese beschränkt sich aber auf eine kurze Definition und einige wichtige Merkmale und Eigenschaften, die zum Verständnis des Algorithmus wichtig sind.
+
+Wirbeltiere, oder auch Vertebrata, sind Tiere mit einer skelettartigen Schädelkapsel, einem Cranium. Deshalb werden sie auch Schädeltiere oder Craniota genannt.\\
+Auf den ersten Blick ist diese Definition etwas überraschend, da als  Haupteigenschaft nicht die Wirbelsäule, sondern der Schädel genannt wird. Das liegt daran, dass zu den Wirbeltieren auch einige Tiere gezählt werden, die gar keine Wirbelsäule sondern "`nur"' eine Chorda dorsalis besitzen. Die Chorda dorsalis ist das Achsenskelett der Chordatiere, einem Tierstamm, zu dem auch die Wirbeltiere gehören. (\cite{Vergleichende_Anatomie}, S.27)\\ %und Wikipedia zu Wirbeltieren und chorda dorsalis
+Hier in dieser Arbeit soll es aber nur um Wirbeltiere mit Wirbelsäule gehen.
+
+Es gibt fünf große Gruppen von Wirbeltieren. Die ersten bekannten Vertebraten sind die Fische. Aus ihnen entwickelten sich die Tetrapoden, Wirbeltiere mit vier Gliedmaßen. Zu den Tetrapoden gehören wiederum vier Klassen von Tieren. Zunächst gibt es die Amphibien, die noch nicht vollkommen terrestrisch leben. Daraus entwickelten sich die Reptilien, die erste Klasse die alle Strukturen besitzt um vollkommen an Land zu leben. Es gibt aber auch Reptilien die wieder im Wasser leben. Außerdem gibt es noch die Klasse der Vögel und der Säugetiere.
+
+Das weithin bekannteste Säugetier ist der Mensch. Da sich Wirbeltiere, vor allem in ihrem Skelett, sehr ähneln, lassen sich viele der im Folgenden aufgeführten Eigenschaften vermutlich leicht "`am eigenen Leib"' nachvollziehen.
 
 
 %------------------------------------
-\section{Das Skelett der Wirbeltiere}
+\section{Das Skelett}
 
-"`Das innere, gelenkige Skelettsystem der Vertebraten ist einzigartig im Tierreich. Es ist das wichtigste aller Organsysteme für das Studium der Wirbeltiermorphologie."' (\cite{Vergleichende_Anatomie}, S.\ 131)
+\vspace{0.5cm}
+\begin{center}
+ \begin{minipage}{12cm}
+  \emph{"`Das innere, gelenkige Skelettsystem der Vertebraten ist einzigartig im Tierreich. Es ist das wichtigste aller Organsysteme für das Studium der Wirbeltiermorphologie."'}
+ 
+  --- "`Vergleichende und funktionelle Anatomie der Wirbeltiere"' \cite{Vergleichende_Anatomie}, S.\ 131
+ \end{minipage}
+\end{center}
+
+Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (ihre linke Körperseite ist symmetrisch zur rechten).
+
 
 \todo{Schematischer Aufbau eines Wirbeltierskeletts}
 
+
 \begin{itemize}
+  \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
+
  \item Muskeln haben Ansatzstellen an Knochen, die Lage und Ausmaße zeigen. (\cite{Vergleichende_Anatomie}, S.\ 131)
  \item Das Skelett eines Wirbeltiers ist nicht unbedingt zusammenhängend.
 
  \item Schultergürtel: Das Schlüsselbein ist bei den meisten Wirbeltieren zurückgebildet, bei manchen gar nicht vorhanden. Das Rabenbein ist bei vielen Wirbeltieren zu einem Fortsatz am Schulterblatt zurückgebildet. Das Schulterblatt ist meistens vorhanden. $\rightarrow$ Nur das Schulterblatt wird modelliert.\\
  \url{https://de.wikipedia.org/wiki/Schulterg\%C3\%BCrtel}
  
- \item "`Die paarigen Flossen von Fischen und Extremitäten von Tetrapoden sind insofern homologe Skelettelemente, als sie bei beiden an Schulter- und Beckengürtel ansetzen und die Extremitäten aus den paarigen Flossen evolutionär hervorgegangen sind.\cite{homology} Sie unterschieden sich jedoch im Knochenaufbau und in der Embryonalentwicklung, so dass ein evolutionärer Übergang aus den Einzelelementen schwer erklärbar ist."'\\
- $\rightarrow$ einfach ignorieren und trotzdem (erstmal) so modellieren?\\
+ \item Homologe Strukturen \todo{(phylogenetische) Homologie}\\
+ "`Die paarigen Flossen von Fischen und Extremitäten von Tetrapoden sind insofern homologe Skelettelemente, als sie bei beiden an Schulter- und Beckengürtel ansetzen und die Extremitäten aus den paarigen Flossen evolutionär hervorgegangen sind.\cite{homology} %durch Wikipedia
+ Sie unterschieden sich jedoch im Knochenaufbau und in der Embryonalentwicklung, so dass ein evolutionärer Übergang aus den Einzelelementen schwer erklärbar ist."'\\
+ $\rightarrow$ einfach ignorieren und trotzdem trotzdem so modellieren\\
  \url{https://de.wikipedia.org/wiki/Extremit\%C3\%A4tenevolution}
  
   \item Ähnlichkeiten und Unterschiede (\zb große vs. kleine Tiere, kann man sie einfach skalieren?; Knochen die sich stark oder weniger stark unterschieden)
