--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -12,10 +12,12 @@
 
 Es folgt eine Einleitung zur biologischen Beschaffenheit der Wirbeltiere. Diese beschränkt sich aber auf eine kurze Definition und einige wichtige Merkmale und Eigenschaften, die zum Verständnis des Algorithmus wichtig sind.
 
+% Definition
 Wirbeltiere, oder auch Vertebrata, sind Tiere mit einer skelettartigen Schädelkapsel, einem Cranium. Deshalb werden sie auch Schädeltiere oder Craniota genannt.\\
 Auf den ersten Blick ist diese Definition etwas überraschend, da als  Haupteigenschaft nicht die Wirbelsäule, sondern der Schädel genannt wird. Das liegt daran, dass zu den Wirbeltieren auch einige Tiere gezählt werden, die gar keine Wirbelsäule sondern "`nur"' eine Chorda dorsalis besitzen. Die Chorda dorsalis ist das Achsenskelett der Chordatiere, einem Tierstamm, zu dem auch die Wirbeltiere gehören. (\cite{Vergleichende_Anatomie}, S.27)\\ %und Wikipedia zu Wirbeltieren und chorda dorsalis
 Hier in dieser Arbeit soll es aber nur um Wirbeltiere mit Wirbelsäule gehen.
 
+% 5 Klassen
 Es gibt fünf große Gruppen von Wirbeltieren. Die ersten bekannten Vertebraten sind die Fische. Aus ihnen entwickelten sich die Tetrapoden, Wirbeltiere mit vier Gliedmaßen. Zu den Tetrapoden gehören wiederum vier Klassen von Tieren. Zunächst gibt es die Amphibien, die noch nicht vollkommen terrestrisch leben. Daraus entwickelten sich die Reptilien, die erste Klasse die alle Strukturen besitzt um vollkommen an Land zu leben. Es gibt aber auch Reptilien die wieder im Wasser leben. Außerdem gibt es noch die Klasse der Vögel und der Säugetiere.
 
 Das weithin bekannteste Säugetier ist der Mensch. Da sich Wirbeltiere, vor allem in ihrem Skelett, sehr ähneln, lassen sich viele der im Folgenden aufgeführten Eigenschaften vermutlich leicht "`am eigenen Leib"' nachvollziehen.
@@ -40,6 +42,9 @@ Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (
 
 
 \begin{itemize}
+  \item Unterschied zwischen Vorder- und Hinterbeinen
+  \item kurzer Absatz über Gelenke
+
   \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
 
  \item Muskeln haben Ansatzstellen an Knochen, die Lage und Ausmaße zeigen. (\cite{Vergleichende_Anatomie}, S.\ 131)
