--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -1,6 +1,7 @@
-%-------------------------------
-%-------------------------------
+%-----------------------------------------------
+%-----------------------------------------------
 \chapter{Biologische Grundlagen zu Wirbeltieren}
+\label{chapter:biology}
 
 \begin{center}
  \begin{minipage}{12cm}
@@ -44,6 +45,7 @@ Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (
 \begin{itemize}
   \item Unterschied zwischen Vorder- und Hinterbeinen
   \item kurzer Absatz über Gelenke
+  \item unterschiedliche Arten von Füßen erklären
 
   \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
 
