--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -26,6 +26,7 @@ Das weithin bekannteste Säugetier ist der Mensch. Da sich Wirbeltiere, vor alle
 
 %------------------------------------
 \section{Das Skelett}
+\label{biology_skeleton}
 
 \vspace{0.5cm}
 \begin{center}
