--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -40,7 +40,7 @@ Das weithin bekannteste Säugetier ist der Mensch. Da sich Wirbeltiere, vor alle
 Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (ihre linke Körperseite ist symmetrisch zur rechten).
 
 
-\todo{Schematischer Aufbau eines Wirbeltierskeletts}
+\todo{Schematischer Aufbau eines Wirbeltierskeletts, Reduktion auf "`wesentliche"' Knochen}
 
 
 \begin{itemize}
