--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -45,7 +45,7 @@ Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (
 
 \begin{itemize}
   \item Unterschied zwischen Vorder- und Hinterbeinen
-  \item kurzer Absatz über Gelenke
+  \item kurzer Absatz über Gelenke, Bewegungseinschränkungen für bestimmtes Gelenk bei jedem Tier als gleich angenommen
   \item unterschiedliche Arten von Füßen erklären
 
   \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
