--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -65,8 +65,8 @@ Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (
   \item Ähnlichkeiten und Unterschiede (\zb große vs. kleine Tiere, kann man sie einfach skalieren?; Knochen die sich stark oder weniger stark unterschieden)
 \end{itemize}
 
-%- - - - - - - - - - - - - -
-\subsection{Die Wirbelsäule}
+
+Die Wirbelsäule
 
 \begin{itemize}
  \item Wirbel können viele verschiedene Merkmale haben, \zb Dornfortsatz, Ansatz der Rippe (\cite{Vergleichende_Anatomie}, (siehe Bild S.\ 165) (S.\ 163)
