--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -1,7 +1,8 @@
-%-----------------------------------------------
-%-----------------------------------------------
-\chapter{Biologische Grundlagen zu Wirbeltieren}
+%---------------------------------
+%---------------------------------
+\chapter{Biologie der Wirbeltiere}
 \label{chapter:biology}
+% eventuell als Abschnitt in "`Grundlagen"'?
 
 \begin{center}
  \begin{minipage}{12cm}
