--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -38,61 +38,67 @@ Das weithin bekannteste Säugetier ist der Mensch. Da sich Wirbeltiere, vor alle
  \end{minipage}
 \end{center}
 
-Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (ihre linke Körperseite ist symmetrisch zur rechten).
+Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (ihre linke Körperseite ist symmetrisch zur rechten). 
 
+% Wirbelsäule
+Die \emph{Wirbelsäule} ist je nach Lebensweise des entsprechenden Wirbeltiers aufgebaut. Ein wesentlicher Einflussfaktor sind die Kräfte, die auf die Wirbelsäule wirken. 
+Bei Fischen muss die Wirbelsäule dem Druck der starken Axialmuskeln, die seitlich am Körper entlang führen, entgegenwirken.
+Bei Tetrapoden sind diese Axialmuskeln zurückgebildet, dafür muss die Wirbelsäule aber der Schwerkraft wiederstehen.
+Bei Vögeln ist die Wirbelsäule noch einmal mehr spezialisiert, da sie an den Flug angepasst werden muss.
+
+% Wirbelanzahl
+Auch die Anzahl der Wirbel unterscheidet sich teilweise erheblich. 
+Die Halswirbelsäule ist \zb bei den Fischen noch gar nicht herausgebildet. Amphibien haben einen Wirbel, der für die Beweglichkeit des Kopfes zuständig ist. Bei Reptilien ist die Halsregion meist schon stärker abgesetzt. Säugetiere haben, bis auf wenige Ausnahmen, genau $7$ Halswirbel, egal wie lang der Hals ist. Vögel haben die meisten Halswirbel, nämlich von $10$ bis $31$ beim Trauerschwan \cite{WikipediaVogelskelett}, meistens aber zwischen $15$ und $20$. (siehe auch \cite{Vergleichende_Anatomie}, Abschnitt 9.2, S.\ 168 ff.)
+
+Ebenso unterscheidet sich die Anzahl der Wirbel auf anderen Teilen der Wirbelsäule. Teilweise sind Wirbel sogar miteinander zu einem größeren Knochen verwachsen. Betrachtet man nur die Säugetiere, so kommt man auf auf etwa $12$ bis $14$ Brustwirbel, $5$ bis $7$ Lendenwirbel, $3$ bis $5$ Kreuzwirbel und $4$ bis $22$ Schwanzwirbel \cite{AnatomieKuenstler}.
+
+% Wirbelform
+Auch die Form der einzelnen Wirbel unterscheidet sich sowohl zwischen den verschiedenen Tieren als auch entlang der Wirbelsäule einer einzelnen Art (\cite{Vergleichende_Anatomie}, Abschnitt 9.1 und Abbildung 9.2). Diese Vielfalt in ein Regelwerk zu zwängen, um sie automatisch generieren zu können, erscheint aussichtslos. Deshalb wird hier nicht weiter darauf eingegangen.
+
+% Extremitäten
+Die \emph{Extremitäten} der Tetrapoden sind nach einem "`Grundbauplan"' aufgebaut (siehe Abbildung \ref{grundbauplan}). Dieser wird jedoch vielfach abgewandelt. Einige Beispiele sind in den Abbildungen \ref{bsp_extremitaeten1} und \ref{bsp_extremitaeten2} zu sehen. (\cite{AllgemeineZoologie}, S.\ 487)\\
+Bei Fischen haben die Extremitäten keine Verbindung zur Wirbelsäule. Erst Amphibien bilden hier eine Verbindung, da sie zur Fortbewegung an Land nötig ist. (\cite{Vergleichende_Anatomie}, Abschnitt 9.2.3)\\
+Ein Wirbeltierskelett ist also nicht unbedingt zusammenhängend.
+
+\begin{figure}
+ \centering
+ \includegraphics[width=0.8\textwidth]{graphics/GrundbauplanExtremitaet.pdf}
+ \caption{\emph{Grundbauplan} der Extremitäten von Tetrapoden: Humerus = Oberarmknochen, Femur = Oberschenkelknochen, Radius = Speiche, Ulna = Elle, Tibia = Schienbein, Fibula = Wadenbein, Metacarpus = Mittelhand, Metatarsus = Mittelfuß. (\cite{AllgemeineZoologie}, S.\ 487; eine ähnliche Abbildung ist auch in \cite{Vergleichende_Anatomie}, S.\ 184, zu finden)}
+ \label{grundbauplan}
+\end{figure}
+
+\begin{figure}
+ \centering
+ \includegraphics[width=0.8\textwidth]{graphics/ExtremitaetenBeispiele.pdf}
+ \caption{Skelett der linken vorderen Extremität bei Huftieren. \textbf{a} Tapir, \textbf{b} Rhinoceros, \textbf{c} Pferd, \textbf{d} Schwein, \textbf{e} Rind, \textbf{f} Kamel. Unterarm weiß, Handwurzel schwarz, Mittelhand weiß, Finger schwarz. \textbf{R} Radius, \textbf{U} Ulna, \textbf{2-5} Mittelhandknochen, \textbf{II-V} Finger. (\cite{AllgemeineZoologie}, S.\ 487)}
+ \label{bsp_extremitaeten1}
+\end{figure}
+
+\begin{figure}
+ \centering
+ \includegraphics[width=0.8\textwidth]{graphics/ExtremitaetenBeispiele2.pdf}
+ \caption{Vordergliedmaßen von Mensch (1), Eidechse (2), Wal (3), Maulwurf (4), Pinguin (5), Pferd (6), Flugsaurier (7), Vogel (8) und Fledermaus (9). (\cite{dtvBiologie}, S.\ 474)}
+ \label{bsp_extremitaeten2}
+\end{figure}
+
+%Gelenke
+Auch bei \emph{Gelenken} gibt es viele verschiedene Ausprägungen (siehe \cite{Vergleichende_Anatomie}, Absatz 21.5.2). Der Einfachheit halber werden hier nur drei Arten von Gelenken betrachtet: unbewegliche Gelenke (\zb zwischen Wirbeln), Gelenke mit einem Freiheitsgrad (\zb an Ellenbogen oder Knie) und Gelenke mit zwei Freiheitsgraden (\zb an Schulter oder Hüfte).
+\todo{Illustration der Gelenke in Extremitäten}\\
+Außerdem wird angenommen, dass die jeweiligen Bewegungsradien für alle Tiere gleich sind.
+
+% Extremitätengürtel
+Schulter- und Beckengürtel bestehen  jeweils aus mehreren Knochen, die je nach Art mehr oder weniger ausgebildet, unterschiedlich geformt oder sogar komplett zurückgebildet sein können. Um das im Folgenden zu vereinfachen, wird der Schultergürtel durch ein Schulterblatt repräsentiert und der Beckengürtel duch einen "`Beckenknochen"', der allerdings eigentlich auch wieder aus mehreren Einzelknochen besteht.
 
 \todo{Schematischer Aufbau eines Wirbeltierskeletts, Reduktion auf "`wesentliche"' Knochen}
-
-
-\begin{itemize}
-  \item Unterschied zwischen Vorder- und Hinterbeinen
-  \item kurzer Absatz über Gelenke, Bewegungseinschränkungen für bestimmtes Gelenk bei jedem Tier als gleich angenommen
-  \item unterschiedliche Arten von Füßen erklären
-
-  \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
-
- \item Muskeln haben Ansatzstellen an Knochen, die Lage und Ausmaße zeigen. (\cite{Vergleichende_Anatomie}, S.\ 131)
- \item Das Skelett eines Wirbeltiers ist nicht unbedingt zusammenhängend.
-
- \item Schultergürtel: Das Schlüsselbein ist bei den meisten Wirbeltieren zurückgebildet, bei manchen gar nicht vorhanden. Das Rabenbein ist bei vielen Wirbeltieren zu einem Fortsatz am Schulterblatt zurückgebildet. Das Schulterblatt ist meistens vorhanden. $\rightarrow$ Nur das Schulterblatt wird modelliert.\\
- \url{https://de.wikipedia.org/wiki/Schulterg\%C3\%BCrtel}
- 
- \item Homologe Strukturen \todo{(phylogenetische) Homologie}\\
- "`Die paarigen Flossen von Fischen und Extremitäten von Tetrapoden sind insofern homologe Skelettelemente, als sie bei beiden an Schulter- und Beckengürtel ansetzen und die Extremitäten aus den paarigen Flossen evolutionär hervorgegangen sind.\cite{homology} %durch Wikipedia
- Sie unterschieden sich jedoch im Knochenaufbau und in der Embryonalentwicklung, so dass ein evolutionärer Übergang aus den Einzelelementen schwer erklärbar ist."'\\
- $\rightarrow$ einfach ignorieren und trotzdem trotzdem so modellieren\\
- \url{https://de.wikipedia.org/wiki/Extremit\%C3\%A4tenevolution}
- 
-  \item Ähnlichkeiten und Unterschiede (\zb große vs. kleine Tiere, kann man sie einfach skalieren?; Knochen die sich stark oder weniger stark unterschieden)
-\end{itemize}
-
-
-Die Wirbelsäule
-
-\begin{itemize}
- \item Wirbel können viele verschiedene Merkmale haben, \zb Dornfortsatz, Ansatz der Rippe (\cite{Vergleichende_Anatomie}, (siehe Bild S.\ 165) (S.\ 163)
- 
- \item Evolution der Wirbelsäule: zunächst Chorda dorsalis mit stützenden Knorpeln (\cite{Vergleichende_Anatomie}, S.\ 166)
- 
-  \item "`Säugetiere haben in der Regel sieben Halswirbel."' Bei Wirbeltieren kann die Anzahl aber zwischen $6$ und $31$ variieren. Vögel haben zwischen $10$ und $31$ und zwei Tiere haben $6$ Wirbel. (\url{https://de.wikipedia.org/wiki/Halswirbel}, weitere Quelle zu Wirbelanzahl bei Säugetieren: \url{https://archive.org/details/bub_gb_4JFmAAAAMAAJ/page/n35/mode/2up}, S.10)
-    \begin{itemize}
-     \item Halswirbel: 7 oder, falls Flügel 10 bis 30
-     \item Brustwirbel: 15
-     \item Lenden- + Kreuzwirbel: 10
-     \item Schwanzwirbel: 5 bis 20
-    \end{itemize}
- Auf der Rückenwirbelsäule liegen also insgesamt 25 Wirbel.   
- Da der "`Wurzelwirbel"' in der Mitte der Rückenwirbelsäule liegt (oder zumindest ungefähr, da Bezierkurve ausgewertet bei 0,5) werden 13 vorne und 12 hinten generiert.
-
- \item Form der Wirbelsäule siehe \url{https://de.wikipedia.org/wiki/Wirbels\%C3\%A4ule}
-\end{itemize}
 
 
 %-----------------------------------------------------
 \section{Fun Facts (die später noch gebraucht werden)}
 
-\zb schwerstes Tier
-
+\begin{itemize}
+ \item schwerstes Tier
+ \item Ähnlichkeiten und Unterschiede (\zb große vs. kleine Tiere, kann man sie einfach skalieren?; Knochen die sich stark oder weniger stark unterschieden)
+\end{itemize}
 
 %-------------------
 \section{Mythologie}
