--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -48,7 +48,7 @@ Bei Vögeln ist die Wirbelsäule noch einmal mehr spezialisiert, da sie an den F
 
 % Wirbelanzahl
 Auch die Anzahl der Wirbel unterscheidet sich teilweise erheblich. 
-Die Halswirbelsäule ist \zb bei den Fischen noch gar nicht herausgebildet. Amphibien haben einen Wirbel, der für die Beweglichkeit des Kopfes zuständig ist. Bei Reptilien ist die Halsregion meist schon stärker abgesetzt. Säugetiere haben, bis auf wenige Ausnahmen, genau $7$ Halswirbel, egal wie lang der Hals ist. Vögel haben die meisten Halswirbel, nämlich von $10$ bis $31$ beim Trauerschwan \cite{WikipediaVogelskelett}, meistens aber zwischen $15$ und $20$. (siehe auch \cite{Vergleichende_Anatomie}, Abschnitt 9.2, S.\ 168 ff.)
+Die Halswirbelsäule ist \zb bei den Fischen noch gar nicht herausgebildet. Amphibien haben einen Wirbel, der für die Beweglichkeit des Kopfes zuständig ist. Bei Reptilien ist die Halsregion meist schon stärker abgesetzt. Säugetiere haben, bis auf wenige Ausnahmen, genau $7$ Halswirbel, egal wie lang der Hals ist. Vögel haben die meisten Halswirbel, nämlich $10$ bis $31$ beim Trauerschwan \cite{WikipediaVogelskelett}, meistens aber zwischen $15$ und $20$. (siehe auch \cite{Vergleichende_Anatomie}, Abschnitt 9.2, S.\ 168 ff.)
 
 Ebenso unterscheidet sich die Anzahl der Wirbel auf anderen Teilen der Wirbelsäule. Teilweise sind Wirbel sogar miteinander zu einem größeren Knochen verwachsen. Betrachtet man nur die Säugetiere, so kommt man auf auf etwa $12$ bis $14$ Brustwirbel, $5$ bis $7$ Lendenwirbel, $3$ bis $5$ Kreuzwirbel und $4$ bis $22$ Schwanzwirbel \cite{AnatomieKuenstler}.
 
@@ -84,29 +84,49 @@ Ein Wirbeltierskelett ist also nicht unbedingt zusammenhängend.
 %Gelenke
 Auch bei \emph{Gelenken} gibt es viele verschiedene Ausprägungen (siehe \cite{Vergleichende_Anatomie}, Absatz 21.5.2). Der Einfachheit halber werden hier nur drei Arten von Gelenken betrachtet: unbewegliche Gelenke (\zb zwischen Wirbeln), Gelenke mit einem Freiheitsgrad (\zb an Ellenbogen oder Knie) und Gelenke mit zwei Freiheitsgraden (\zb an Schulter oder Hüfte).
 \todo{Illustration der Gelenke in Extremitäten}\\
-Außerdem wird angenommen, dass die jeweiligen Bewegungsradien für alle Tiere gleich sind.
+Außerdem wird angenommen, dass die jeweiligen Bewegungsradien für alle Wirbeltiere gleich sind.
 
 % Extremitätengürtel
-Schulter- und Beckengürtel bestehen  jeweils aus mehreren Knochen, die je nach Art mehr oder weniger ausgebildet, unterschiedlich geformt oder sogar komplett zurückgebildet sein können. Um das im Folgenden zu vereinfachen, wird der Schultergürtel durch ein Schulterblatt repräsentiert und der Beckengürtel duch einen "`Beckenknochen"', der allerdings eigentlich auch wieder aus mehreren Einzelknochen besteht.
+Schulter- und Beckengürtel bestehen  jeweils aus mehreren Knochen, die je nach Art mehr oder weniger ausgebildet, unterschiedlich geformt oder sogar komplett zurückgebildet sein können (siehe \cite{Vergleichende_Anatomie}, Absatz 9.7). Um das im Folgenden zu vereinfachen, wird der Schultergürtel durch ein Schulterblatt repräsentiert und der Beckengürtel duch einen "`Beckenknochen"', der allerdings eigentlich auch wieder aus mehreren Einzelknochen besteht.
 
 \todo{Schematischer Aufbau eines Wirbeltierskeletts, Reduktion auf "`wesentliche"' Knochen}
 
 
 %-----------------------------------------------------
-\section{Fun Facts (die später noch gebraucht werden)}
+\section{Von Groß und Klein}
 
-\begin{itemize}
- \item schwerstes Tier
- \item Ähnlichkeiten und Unterschiede (\zb große vs. kleine Tiere, kann man sie einfach skalieren?; Knochen die sich stark oder weniger stark unterschieden)
-\end{itemize}
+\vspace{0.5cm}
+\begin{center}
+ \begin{minipage}{12cm}
+  \emph{Ein Elefant ist keine genaue maßstabsgetreue Vergrößerung einer Maus.}
+ 
+  --- "`Vergleichende und funktionelle Anatomie der Wirbeltiere"' \cite{Vergleichende_Anatomie}, S.\ 4
+ \end{minipage}
+\end{center}
+
+% Extrema
+Das größte und schwerste Wirbeltier ist der Blauwal, er kann bis zu $120$ Tonnen wiegen (siehe \ref{appendix_pca_weight}). Das aktuell kleinste bekannte Wirbeltier, mit einer Länge von $7$ bis $8$mm, ist der Frosch \emph{Paedophryne amauensis} \cite{smallestVertebrate}.
+
+% Probleme bei Skalierung
+Wenn ein Tier, oder eine ganze Stammeslinie, wächst, so ändert sich die Größe gleichmäßig. Dieses Wachstum ist aber begrenzt. Der Grund dafür ist, dass die Oberfläche nicht proportional mit dem Volumen mitwächst. Beispielsweise produziert ein Säugetier Wärme proportional zu seinem Volumen. Es kann aber nur Wärme proportional zu seiner Oberfläche abgeben. Dadurch haben große Säugetiere eher Probleme damit Wärme abzugeben und kleine damit warm zu bleiben. Ein ähnliches Problem tritt bei Knochen auf. Die Last, die ein Knochen tragen kann, ist ungefähr proportional zu seiner Querschnittsfläche. Das Skelett muss aber die komplette Masse des Körpers tragen.
+
+% Lösungen für Skalierungen
+Aus diesem Grund ist bei sehr großen Tieren die Oberfläche überproportional vergößert. Bei Knochenquerschnitten ist das jedoch nicht unbedingt der Fall. Das Problem an dicken Knochen ist, dass sie den Bewegungsradius, \zb der Extremitäten, stark einschränken. Deshalb passen viele Tiere ihre Körperhaltung und Aktivität an um Spitzenkräfte, wie Stöße oder Oszillationen, zu vermeiden.\\ (\cite{Vergleichende_Anatomie}, Kapitel 23)
+
+Sehr große und sehr kleine Wirbeltiere können also nicht über einfaches Skalieren ineinander überführt werden. Dennoch ähneln sich ihre Skelette sehr.
+
 
 %-------------------
 \section{Mythologie}
+\label{biology_mythology}
 
+Dieser Abschnitt entfernt sich von tatsächlich vorkommenden Wirbeltieren und wirft einen Blick auf fantastische Tiere aus der Mythologie. Diese Webseite \cite{vertebrateExtraLimbs} gibt einen guten Überblick über fiktive Wirbeltiere mit zusätzlichen Gliedmaßen. 
+
+Bekannte Beispiele sind unter anderem:
 \begin{itemize}
- \item Zentauren haben Körper wie ein Pferd, aber statt einem Hals setzt ein menschlicher Oberkörper auf Schultergürtel auf.\\
- \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/OurCentaursAreDifferent?from=Main.CentauroidForm}
- \item Pegasus hat den Körper eines Pferdes + Flügel, die zusätzlich zu den Vorderbeinen an Schultergürtel ansetzen\\
- \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/Pegasus}
+ \item \textbf{Zentauren} Sie haben einen Pferdekörper, aber statt eines Halses setzt ein menschlicher Oberkörper auf dem Schultergürtel auf. \cite{centaurs}
+ 
+ \item \textbf{Pegasus} Der Pegasus hat ebenfalls den Körper eines Pferdes, aber zusätzlich Flügel, die zusätzlich zu den Vorderbeinen am Schultergürtel ansetzen. \cite{pegasus}
+ 
+ \item \textbf{Asiatische Drachen} Sie haben einen langen schlangenartigen Körper mit oft mehr als vier Beinen.
 \end{itemize}
-
